--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </head>
 
 <body>
-    <form>
+    <form action="http://www.qinxingguan.com/UserLogin" method="POST">
         <table>
             <tr>
                 <td>用户名：</td>
-                <td><input type="text" name="username"></td>
+                <td><input type="text" name="user"></td>
             </tr>
             <tr>
                 <td>密码：</td>
-                <td><input type="password" name="password"></td>
+                <td><input type="password" name="pwd"></td>
             </tr>
             <tr>
                 <td colspan="2" style="text-align: center;"><input type="button" value="提交"></td>
