--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <td><input type="password" name="pwd"></td>
             </tr>
             <tr>
-                <td colspan="2" style="text-align: center;"><input type="button" value="提交"></td>
+                <td colspan="2" style="text-align: center;"><input type="submit" value="提交"></td>
             </tr>
         </table>
     </form>
